init app stack navigation: auth navigation, app navigation

--- a/app.json
+++ b/app.json
@@ -24,6 +24,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "scheme": "todo-app",
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
