--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~53.0.22",
     "expo-constants": "^17.1.7",
     "expo-linking": "^7.1.7",
@@ -17,7 +18,8 @@
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.4"
+    "react-native-screens": "^4.15.4",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
