--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~53.0.22",
     "expo-constants": "^17.1.7",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "^7.1.7",
     "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
